Set JET settings to use Java 5